=============
Release 0.6.2
=============

* fix for openephys and new python syntax
* fix in the handling of parameters 
* minor optimization in the fitting procedure
* support for qt5 (and backward compatibility with qt4)

=============
Release 0.6.1
=============

* fix for similarities and merged output from the GUIs
* fix for Python 3 and HDF5
* fix for Python 3 and launcher GUI
* fix for maxlag in the merging GUI
* optimization in the merging GUI for pairs suggestion
* addition of an auto_mode for meta merging, to suppress manual curation
* various fixes in the docs
* fix a bug when closing temporary files on windows
* allow spaces in names of probe files
* collect_all should take dead times into account
* patch to read INTAN 2.0 files
* fix in the MATLAB GUI when splitting neurons
* fix in the MATLAB GUI when selecting individual amplitudes

=============
Release 0.6.0
=============

* fix an IMPORTANT BUG in the similarities exported for phy/MATLAB, affect the suggestions in the GUI
* improvements in the neuralynx wrapper
* add the possibility to exclude some portions of the recordings from the analysis (see documentation)
* fix a small bug in MS-MPI (Windows only) when shared memory is activated and emtpy arrays are present

=============
Release 0.5.9
=============

* The validating step can now accept custom spikes as inputs
* Change the default frequency for filtering to 300Hz instead of 500Hz

=============
Release 0.5.8
=============

* fix a bug for int indices in some file wrappers (python 3.xx) (thanks to Ben Acland)
* fix a bug in the preview gui to write threshold
* fix a bug for some paths in Windows (thanks to Albert Miklos)
* add a wrapper for NeuraLynx (.ncs) file format
* fix a bug in the installation of the MATLAB GUI
* fix a bug to see results in MATLAB GUI with only 1 channel
* fix a bug to convert data to phy with only positive peaks
* add builds for python 3.6
* optimizations in file wrappers